seeder and clear scripts and remove category
