# zenith-backend/src/routes/skills.routes.ts
@@ -1,18 +1,11 @@
 import { Router } from "express";
 import { SkillsController } from "../controllers/skills.controller";
 import { studentMiddleware } from "../middleware/student.middleware";
+import { authMiddleware } from "../middleware/auth.middleware";
 
 const router = Router();
 
-// Get all skill categories
-router.get("/categories", studentMiddleware, SkillsController.getCategories);
-
-// Get skills by category ID
-router.get(
-  "/categories/:categoryId/skills",
-  studentMiddleware,
-  SkillsController.getSkillsByCategory
-);
+router.get("/skills", authMiddleware, SkillsController.getAllSkills);
 
 // Update student skills
 router.put(
